--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,12 @@
         {% include header.html%}
             
         <div class="full-hero hero-home">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <h1>I'm an h1</h1>
             <ul class="social-list">
                 <li>
@@ -18,7 +24,7 @@
                 </li>
             </ul>
         </div>
-        
+
         <h2>THE FOUNDERS</h2>
         <p>
             Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee Donahoe,
@@ -26,7 +32,6 @@
             the Learn Enough tutorials can benefit at least a billion people, and probably
             more.
         </p>
-        <p>Test paragraph</p>
 
         <div class="bio-wrapper">
             <div class="bio-box">
@@ -91,7 +96,7 @@
                 </div>
             </div>
         </div>
-
+        {% include footer.html %}
     </body>
 
 </html>
