--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,19 @@
 <head>
-    <title>Test Page: Don't Panic</title>
-    <meta charset="utf-8">
+    {% if page.title %}
+        <title> {{ page.title }} | Onyela's Test Website</title>
+    {% else %}
+        <title> Onyela's Test Website</title>
+    {% endif %}
+
+    {% if page.description %}
+     <meta name="description" content= " {{ page.description }} ">
+    {% else %}
+        <meta name="description" content="This is a dangerous website">
+    {% endif %}
+
+    
+    <link rel="icon" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
